--- a/fot.html
+++ b/fot.html
@@ -5,7 +5,7 @@
       Telefon: 070-240 81 81 E-post: info@ekhagastiftelsen.se <br/>
       Copyright &copy; 2010 Ekhagastiftelsen. All Rights Reserved.</p>
     <p class="tos"><a href="omwebbplatsen.shtml" class="link">&raquo; Om webbplatsen</a>&nbsp;|&nbsp;
-	<a href="uppdaterad.shtml" class="link">&raquo; Uppdaterad: 2016-11-01</a></p>
+	&raquo; Uppdaterad: 2017-03-16</p>
   </div>
 </div>
 
@@ -18,7 +18,7 @@
       Telefon: 070-240 81 81 E-post: info@ekhagastiftelsen.se <br/>
 	  Internet: www.ekhagastiftelsen.se<br/>
       Copyright &copy; 2010 Ekhagastiftelsen. All Rights Reserved.</p>
-    <p class="tos"><a href="uppdaterad.shtml" class="link">&raquo; Uppdaterad: 2016-11-01</a></p><!-- GLÖM INTE DET ANDRA DATUMET OVAN!!!!! -->
+    <p class="tos">&raquo; Uppdaterad: 2017-03-16</p><!-- GLÖM INTE DET ANDRA DATUMET OVAN!!!!! -->
   </div>
 </div>
 
