--- a/huvud.html
+++ b/huvud.html
@@ -75,12 +75,11 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 			<li><a href="medicin2010.shtml">Konferens</a></li>
           </ul>
         </li>
-        <li><a href="andamal.shtml">Ansökan</a>
+        <li><a href="ansokan.shtml">Ansökan</a>
 		  <ul>
-	        <li><a href="andamal.shtml">Forskningsändamål</a></li>
-            <li><a href="vem.shtml">Vem kan söka?</a></li>
-            <li><a href="ansokan.shtml">Ansökan</a></li>
-			<li><a href="budget.shtml">Budget</a></li>
+	        <li><a href="vem.shtml">Vem kan söka medel?</a></li>
+			<li><a href="ansokan.shtml">Instruktioner</a></li>
+            <li><a href="budget.shtml">Budgetinstruktioner</a></li>
             <li><a href="tidplan.shtml">Tidplan</a></li>
             <!--<li><a href="eansokan.shtml">E-ansökan</a></li>-->
             <li><a href="rapportering.shtml">Rapportering</a></li>
