Nya ansökningsinstruktioner och formulär
Borttag gammal blankett, uppdaterade anvisningar och budget, nytt
formulär, ny checklista och anvisningar

--- a/huvud.html
+++ b/huvud.html
@@ -52,8 +52,8 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 <div id="body">
   <!--main menu start -->
   <div id="boxmenu">
-    <!-- Text som läggs ut ovanför menyn - start --
-	<font color="#000000">Nya ansökningsinstruktioner att använda från 20 mars 2017.<br>
+    <!-- Text som läggs ut ovanför menyn - start -->
+	<font color="#000000">Nya ansökningsinstruktioner att använda från 21 mars 2017.<br>
 	Läs mer <a href="nytt2017.shtml">här</a>.</font><br>
 	<!-- Text som läggs ut ovanför menyn - slut -->
     <p class="navLeft"></p>
