Borttag nivå 2 i forskningsmenyn

--- a/huvud.html
+++ b/huvud.html
@@ -71,10 +71,10 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
           <ul>
             <li><a href="forskning.shtml">Översikt</a></li>
             <li><a href="anslag.shtml">Beviljade anslag</a>
-              <ul>
+              <!--<ul>
                 <li><a href="allaanslag.shtml">Alla anslag</a></li>
-                <!--<li><a href="urval.shtml">Gör/Visa urval</a></li>-->
-              </ul>
+                <li><a href="urval.shtml">Gör/Visa urval</a></li>
+              </ul>-->
             </li>
 			<li><a href="medicin2010.shtml">Konferens</a></li>
           </ul>
