Ny version Eng inkl nya bilagor utlagt

--- a/eng/huvud.html
+++ b/eng/huvud.html
@@ -49,6 +49,10 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 <div id="body">
   <!--main menu start -->
   <div id="boxmenu">
+	<!-- Text som läggs ut ovanför menyn - start -->
+	<font color="#000000">New application instructions to be used from March 23 2017.<br>
+	Read more <a href="nytt2017.shtml">here</a>.</font><br>
+	<!-- Text som läggs ut ovanför menyn - slut -->
     <p class="navLeft"></p>
     <div id="myslidemenu" class="jqueryslidemenu">
       <ul>
@@ -72,10 +76,9 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 			<li><a href="medicin2010.shtml">Conference</a></li>
           </ul>
         </li>
-        <li><a href="andamal.shtml">Application</a>
+        <li><a href="ansokan.shtml">Application</a>
 		  <ul>
-	        <li><a href="andamal.shtml">Research possibilities</a></li>
-            <li><a href="vem.shtml">Who can apply?</a></li>
+	        <li><a href="vem.shtml">Who can apply?</a></li>
             <li><a href="ansokan.shtml">Application</a></li>
 			<li><a href="budget.shtml">Budget</a></li>
             <li><a href="tidplan.shtml">Time table</a></li>
