--- a/eng/fot.html
+++ b/eng/fot.html
@@ -3,9 +3,9 @@
   <div id="footer">
     <p class="address">Ekhagastiftelsen, Box 34012, SE-10026 Stockholm, Sweden.<br/>
       Telephone: +46 70 240 81 81 Email: info@ekhagastiftelsen.se <br/>
-      Copyright &copy; 2010 Ekhagastiftelsen. All Rights Reserved.</p>
+      Copyright &copy; 2017 Ekhagastiftelsen. All Rights Reserved.</p>
     <p class="tos"><a href="omwebbplatsen.shtml" class="link">&raquo; About the website</a>&nbsp;|&nbsp;
-	<a href="uppdaterad.shtml" class="link">&raquo; Updated: 2016-11-01</a></p>
+	&raquo; Updated: 2017-03-23</p>
   </div>
 </div>
 
@@ -17,8 +17,8 @@
     <p class="address">Ekhagastiftelsen, Box 34012, SE-10026 Stockholm, Sweden.<br/>
       Telephone: +46 70 240 81 81 Email: info@ekhagastiftelsen.se <br/>
 	  Internet: www.ekhagastiftelsen.se<br/>
-      Copyright &copy; 2010 Ekhagastiftelsen. All Rights Reserved.</p>
-    <p class="tos"><a href="uppdaterad.shtml" class="link">&raquo; Updated: 2016-11-01</a></p><!-- GLÖM INTE DET ANDRA DATUMET OVAN!!!!! -->
+      Copyright &copy; 2017 Ekhagastiftelsen. All Rights Reserved.</p>
+    <p class="tos">&raquo; Updated: 2017-03-23</p><!-- GLÖM INTE DET ANDRA DATUMET OVAN!!!!! -->
   </div>
 </div>
 
