--- a/eng/huvud.html
+++ b/eng/huvud.html
@@ -50,8 +50,8 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
   <!--main menu start -->
   <div id="boxmenu">
 	<!-- Text som läggs ut ovanför menyn - start -->
-	<font color="#000000">New application instructions to be used from March 23 2017.<br>
-	Read more <a href="nytt2017.shtml">here</a>.</font><br>
+	<!--<font color="#000000">New application instructions to be used from March 23 2017.<br>
+	Read more <a href="nytt2017.shtml">here</a>.</font><br>-->
 	<!-- Text som läggs ut ovanför menyn - slut -->
     <p class="navLeft"></p>
     <div id="myslidemenu" class="jqueryslidemenu">
