Uppdaterat jäv och föredragande

--- a/vr/index.html
+++ b/vr/index.html
@@ -41,9 +41,9 @@ tr:nth-child(even) {
 	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2017.html">L&auml;nk till ans&ouml;kningarna</a></td>
 </tr>
 <tr>
-	<td>F&ouml;rdelning av ans&ouml;kningar</td>
+	<td>F&ouml;rdelning av ans&ouml;kningar - version 2 2017-07-07</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Foredragande2017-1.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Foredragande2017-2.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Instruktioner f&ouml;r utv&auml;rderingen</td>
