--- a/vr/index.html
+++ b/vr/index.html
@@ -38,17 +38,17 @@ tr:nth-child(even) {
 <tr>
 	<td>&Aring;rets ans&ouml;kningar</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2017.html">L&auml;nk till ans&ouml;kningarna</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2018.html">L&auml;nk till ans&ouml;kningarna</a></td>
 </tr>
 <tr>
-	<td>F&ouml;rdelning av ans&ouml;kningar - version 2 2017-07-07</td>
+	<td>F&ouml;rdelning av ans&ouml;kningar  - version 3 2018-08-17  </td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Foredragande2017-2.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Foredragande2018-3.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Instruktioner f&ouml;r utv&auml;rderingen</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/VRInstruktioner2017.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/VRInstruktioner2018.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Torkels beskrivning av arbetsmetodik</td>
@@ -58,34 +58,49 @@ tr:nth-child(even) {
 <tr>
 	<td>Mall f&ouml;r utl&aring;tandetexter</td>
 	<td>ladda ner och fyll i dina bed&ouml;mningar</td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/utvard2017.xlsx">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/utvard2018.xlsx">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Styrelsens beskrivning av &auml;ndam&aring;l, inrikting och relevans</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Andamal, inriktning, relevanskriterier 2017.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Andamal, inriktning, relevanskriterier 2018.pdf">L&auml;nk till dokument</a></td>
 </tr>
-<tr>
+<!--<tr>
 	<td>Mall f&ouml;r utl&aring;tandetexter</td>
 	<td>visar vilka delar ett utl&aring;tande<br>ska inneh&aring;lla och exempel p&aring; texter</td>
 	<td><a href="http://www.ekhagastiftelsen.se/vr/MallUtlatande2017.pdf">L&auml;nk till dokument</a></td>
-</tr>
+</tr>-->
 <tr>
 	<td>Sammanst&auml;llning &ouml;ver alla ans&ouml;kningar</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/OversiktAnsokningar2017.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/OversiktAnsokningar2018.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
-	<td>Mail/Brev till VR juni 2017</td>
+	<td>Mail/Brev till VR juni 2018</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/VR170614">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/VR180608">L&auml;nk till dokument</a></td>
 </tr>
 
 </table>
 <p>
   
-<h3>Tidigare &aring;rs utl&aring;tanden och beslut</h3>  
+<h3>Tidigare &aring;rs utl&aring;tanden och ans&ouml;kningar</h3>  
 <table>
+<tr>
+	<td>2017</td>
+	<td>VR utl&aring;tande november 2017</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/ForslagKompettering2017.pdf">L&auml;nk till dokument</a></td>
+</tr>	
+<tr>
+	<td> </td>
+	<td>VR utl&aring;tande september 2017</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/Forslag2017.pdf">L&auml;nk till dokument</a></td>
+</tr>
+<tr>
+	<td> </td>
+	<td>Alla ans&ouml;kningsdokument</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2017.html">L&auml;nk till dokument</a></td>
+</tr>
 <tr>
 	<td>2016</td>
 	<td>VR utl&aring;tande november 2016</td>
@@ -97,12 +112,17 @@ tr:nth-child(even) {
 	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/Beslut2016.pdf">L&auml;nk till dokument</a></td>
 </tr>	
 <tr>
+	<td> </td>
+	<td>Alla ans&ouml;kningsdokument</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2016.html">L&auml;nk till dokument</a></td>
+</tr>
+</tr>
 	<td>2015</td>
 	<td>VR utl&aring;tande oktober 2015</td>
 	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/Beslut2015-2.pdf">L&auml;nk till dokument</a></td>
 </tr>	
 <tr>
-	<td>2015</td>
+	<td></td>
 	<td>VR utl&aring;tande september 2015</td>
 	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/Beslut2015.pdf">L&auml;nk till dokument</a></td>
 </tr>	
@@ -110,6 +130,11 @@ tr:nth-child(even) {
 	<td> </td>
 	<td>VR bilaga ans&ouml;kans relevans september 2015</td>
 	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/VRRelevansAnslag2015.pdf">L&auml;nk till dokument</a></td>
+</tr>
+<tr>
+	<td> </td>
+	<td>Alla ans&ouml;kningsdokument</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2015.html">L&auml;nk till dokument</a></td>
 </tr>	
 <tr>
 	<td>2014</td>
