Lägga ut 2018 års anslag

--- a/projekt/2018-05.html
+++ b/projekt/2018-05.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+ 2018-05
  
   </font></p></td>
 </tr>
@@ -60,7 +60,9 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+Holistisk hälsa i Sápmi
+
+
 	
 	</td>
 </tr>
@@ -72,7 +74,9 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Johan Wedel
+
+
 	
 	</td>
 </tr>
@@ -80,19 +84,20 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
-				
+	Bangatan 24C<br>
+	414 63 Göteborg<br>
+	Sverige
+
+	  
 	  </td>
 </tr>
 <tr>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		johan.wedel@globalstudies.gu.se
+
+
 	
 	</td>
 </tr>
@@ -100,15 +105,17 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
-	
+		0735-569588
+
+
 	</td>
 </tr>
 <tr>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Johan Wedel
+
 	
 	</td>
 </tr>
@@ -116,9 +123,10 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		
 	
-	 kr</td>
+	  45 000 kr 
+</td>
 </tr>
 <tr>
     <td class=bp-colx>&nbsp;</td>
@@ -158,7 +166,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=sv-col></td>
     <td class=sh-col>
 	<P>© Ekhagastiftelsen, <A href=mailto:info@ekhagastiftelsen.se>Webmaster</A>, 
-	senast uppdaterad: 2009-12-17</P>
+	senast uppdaterad: 2019-03-30</P>
     </td>
 </tr>
 </table>
