--- a/projekt/2018-10.html
+++ b/projekt/2018-10.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-10
  
   </font></p></td>
 </tr>
@@ -60,7 +60,8 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+Den vårdande beröringens betydelse inom akutvårdskontext med inriktning mot intensivvård. 
+
 	
 	</td>
 </tr>
@@ -72,7 +73,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+Maria Henricson
+
 	
 	</td>
 </tr>
@@ -80,11 +82,11 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Jönköpings universitet<br>
+		Hälsohögskolan, Avd för omvårdnad<br>
+		Box 1026		<br>
+		551 11 Jönköping<br>
+				Sverige
 				
 	  </td>
 </tr>
@@ -92,7 +94,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		maria.henricson@ju.se
+
 	
 	</td>
 </tr>
@@ -100,7 +103,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		036-1012 44
+
 	
 	</td>
 </tr>
@@ -108,7 +112,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Jönköpings universitet
+
 	
 	</td>
 </tr>
@@ -116,9 +121,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
-	
-	 kr</td>
+		340 000 kr</td>
 </tr>
 <tr>
     <td class=bp-colx>&nbsp;</td>
