--- a/projekt/2018-18.html
+++ b/projekt/2018-18.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-18
  
   </font></p></td>
 </tr>
@@ -60,7 +60,8 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Återställa tarmhälsan hos gynekologiska cancerpatienter som har genomgått strålbehandling - en studie om tarmflora och kostfibrers betydelse
+
 	
 	</td>
 </tr>
@@ -72,7 +73,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Fei Sjöberg
+
 	
 	</td>
 </tr>
@@ -80,11 +82,12 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Institutionen för biomedicin<br>
+		Avdelningen för infektionssjukdomar<br>
+		Göteborgs universitet	<br>
+		Box 440<br>
+		405 30 Göteborg<br>
+		Sverige
 				
 	  </td>
 </tr>
@@ -92,7 +95,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		fei.sjoberg@microbio.gu.se
+
 	
 	</td>
 </tr>
@@ -100,7 +104,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		0737754023 
+
 	
 	</td>
 </tr>
@@ -108,7 +113,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Göteborgs universitet
+
 	
 	</td>
 </tr>
@@ -116,7 +122,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		485 000
 	
 	 kr</td>
 </tr>
