--- a/projekt/2018-22.html
+++ b/projekt/2018-22.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-22
  
   </font></p></td>
 </tr>
@@ -60,8 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
-	
+	Tillgänglighet och implementering av Mindfulnessbaserade Interventioner (MBI) inom Svensk hälso- och sjukvård
 	</td>
 </tr>
 
@@ -72,7 +71,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Maria Niemi
 	
 	</td>
 </tr>
@@ -80,10 +79,10 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
+	  	Inst f folkhälsovetenskap <br>
+		Karolinska institutet<br>
+		Solnavägen 1 E	<br>
+		104 31 Stockholm		<br>
 				
 				
 	  </td>
@@ -92,7 +91,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+	maria.niemi@ki.se
 	
 	</td>
 </tr>
@@ -100,7 +99,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		073-7887442
 	
 	</td>
 </tr>
@@ -108,7 +107,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Karolinska institutet
 	
 	</td>
 </tr>
@@ -116,7 +115,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		980 000
 	
 	 kr</td>
 </tr>
