--- a/projekt/2018-32.html
+++ b/projekt/2018-32.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-32
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Hållbar produktion av vallbaljväxter i ekologiska odlingssystem
 	
 	</td>
 </tr>
@@ -72,18 +72,17 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
-	
+	Ann-Charlotte Wallenhammar
 	</td>
 </tr>
 <tr>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
+	  Hushållningssällskapet|HS Konsult AB<br>
+		 Box 271<br>
+		701 45 Örebro		<br>
+		Sverige		<br>
 				
 				
 	  </td>
@@ -92,7 +91,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+Ann-Charlotte Wallenhammar@hushallningssallskapet.se
 	
 	</td>
 </tr>
@@ -100,7 +99,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		070-3291781
 	
 	</td>
 </tr>
@@ -108,7 +107,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+	HS Konsult AB	
 	
 	</td>
 </tr>
@@ -116,8 +115,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
-	
+		870 000
 	 kr</td>
 </tr>
 <tr>
