--- a/projekt/2018-56.html
+++ b/projekt/2018-56.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-56
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Epigenetics and Vegetarian Dietary Pattern Study – Evaluating changes in Epigenetic Methylation Patterns in Lifetime Vegetarians and Non-Vegetarians
 	
 	</td>
 </tr>
@@ -72,7 +72,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Nico S. Rizzo
 	
 	</td>
 </tr>
@@ -80,11 +80,11 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Department of Biosciences and Nutrition <br>
+		Karolinska institutet<br>
+		Hälsovägen 7C		<br>
+		141 57 Huddinge		<br>
+		Sverige		
 				
 	  </td>
 </tr>
@@ -92,7 +92,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		Nico.Rizzo@ki.se
 	
 	</td>
 </tr>
@@ -100,7 +100,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		+1-951-250-0244
 	
 	</td>
 </tr>
@@ -108,7 +108,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Karolinska institutet
 	
 	</td>
 </tr>
@@ -116,7 +116,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		1 500 000
 	
 	 kr</td>
 </tr>
