--- a/projekt/2018-74.html
+++ b/projekt/2018-74.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-74
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Beehive as a natural resource of antibiotic alternatives
 	
 	</td>
 </tr>
@@ -72,7 +72,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Jelena Šuran
 	
 	</td>
 </tr>
@@ -80,11 +80,12 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Faculty of Veterinary Medicine <br>
+		Department of Pharmacology and Toxicology<br>
+		University of Zagreb		<br>
+		Heinzelova 55		<br>
+		10000	Zagreb<br>
+		Croatia
 				
 	  </td>
 </tr>
@@ -92,7 +93,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		elena.suran@vef.hr
 	
 	</td>
 </tr>
@@ -100,7 +101,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+	+385 911527451
 	
 	</td>
 </tr>
@@ -108,7 +109,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		University of Zagreb
 	
 	</td>
 </tr>
@@ -116,7 +117,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		820 000
 	
 	 kr</td>
 </tr>
