--- a/projekt/2018-90.html
+++ b/projekt/2018-90.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-90
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Development of novel baits to selectively prevent Drosophila suzukii from damaging berry production in Sweden
 	
 	</td>
 </tr>
@@ -72,19 +72,17 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
-	
+	Teun Dekker
 	</td>
 </tr>
 <tr>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Sveriges lantbruksuniversitet <br>
+		Växtskyddsvägen 3<br>
+		230 53 Alnarp<br>
+		Sverige
 				
 	  </td>
 </tr>
@@ -92,7 +90,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		teun.dekker@slu.se
 	
 	</td>
 </tr>
@@ -100,7 +98,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		040-415306
 	
 	</td>
 </tr>
@@ -108,7 +106,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Sveriges lantbruksuniversitet
 	
 	</td>
 </tr>
@@ -116,7 +114,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		920 000
 	
 	 kr</td>
 </tr>
