--- a/projekt/2018-93.html
+++ b/projekt/2018-93.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-93
  
   </font></p></td>
 </tr>
@@ -60,8 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
-	
+	Antimikrobiella resistensgener i tarmfloran hos 5-åringar
 	</td>
 </tr>
 
@@ -72,7 +71,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Johan Alm
 	
 	</td>
 </tr>
@@ -80,11 +79,9 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Sachsska barn- och ungdomssjukhuset<br>
+		118 83 Stockholm<br>
+		Sverige		
 				
 	  </td>
 </tr>
@@ -92,23 +89,21 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
-	
+		Johan.Alm@ki.se
 	</td>
 </tr>
 <tr>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
-	
+	073-9732600
 	</td>
 </tr>
 <tr>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Karolinska institutet
 	
 	</td>
 </tr>
@@ -116,7 +111,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		1 120 000
 	
 	 kr</td>
 </tr>
