--- a/projekt/2018-01.html
+++ b/projekt/2018-01.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+ 2018-01
  
   </font></p></td>
 </tr>
@@ -60,7 +60,8 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Promoting human health and well-being by maintaining matrix related organic food qualities from field to fork
+
 	
 	</td>
 </tr>
@@ -72,7 +73,8 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Dominika Srednicka-Tober
+
 	
 	</td>
 </tr>
@@ -80,19 +82,21 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
-				
+	 Warsaw University of Life Sciences<br>
+ 	Department of Functional and Organic Foods and Commodities<br>
+	Nowoursynowska 159c<br>
+	02-776 Warsaw<br>
+	Poland
+
+	  
 	  </td>
 </tr>
 <tr>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		dominika_srednicka_tober@sggw.pl
+
 	
 	</td>
 </tr>
@@ -100,15 +104,15 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
-	
+		+48 22 5937035
+
 	</td>
 </tr>
 <tr>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Warsaw University of Life Sciences
 	
 	</td>
 </tr>
@@ -116,9 +120,10 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		
 	
-	 kr</td>
+	  700 000 kr 
+</td>
 </tr>
 <tr>
     <td class=bp-colx>&nbsp;</td>
@@ -158,7 +163,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=sv-col></td>
     <td class=sh-col>
 	<P>© Ekhagastiftelsen, <A href=mailto:info@ekhagastiftelsen.se>Webmaster</A>, 
-	senast uppdaterad: 2009-12-17</P>
+	senast uppdaterad: 2019-03-30</P>
     </td>
 </tr>
 </table>
