--- a/projekt/2018-30.html
+++ b/projekt/2018-30.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-30
  
   </font></p></td>
 </tr>
@@ -60,8 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
-	
+Hållbar livsstil och hälsa ur ett folkhälsoperspektiv 
 	</td>
 </tr>
 
@@ -72,7 +71,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Katarina Bälter
 	
 	</td>
 </tr>
@@ -80,11 +79,11 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Inst för Medicinsk Epidemiologi och Biostatistik (MEB) <br>
+		Karolinska institutet<br>
+		Nobels väg 12a		<br>
+		171 77 Stockholm 		<br>
+		Sverige		
 				
 	  </td>
 </tr>
@@ -92,7 +91,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		katarina.balter@ki.se
 	
 	</td>
 </tr>
@@ -100,7 +99,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		073-6620898
 	
 	</td>
 </tr>
@@ -108,15 +107,14 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
-	
+	Karolinska institutet
 	</td>
 </tr>
 <tr>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+	1 260 000
 	
 	 kr</td>
 </tr>
