--- a/projekt/2018-42.html
+++ b/projekt/2018-42.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-42
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	FitForChange - Fysisk aktivitet som behandling för alkoholberoende: en randomiserad kontrollerad studie
 	
 	</td>
 </tr>
@@ -72,7 +72,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Mats Hallgren
 	
 	</td>
 </tr>
@@ -80,11 +80,11 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Institutionen för folkhälsovetenskap <br>
+		 Karolinska institutet<br>
+		Solnavägen 1 E		<br>
+		113 65 Stockholm		<br>
+		Sverige	
 				
 	  </td>
 </tr>
@@ -92,15 +92,14 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
-	
+	mats.hallgren@ki.se
 	</td>
 </tr>
 <tr>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		072-873 54 51
 	
 	</td>
 </tr>
@@ -108,7 +107,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Karolinska institutet
 	
 	</td>
 </tr>
@@ -116,7 +115,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		1 250 000
 	
 	 kr</td>
 </tr>
