--- a/projekt/2018-73.html
+++ b/projekt/2018-73.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-73
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	HealthWheat - Development of a low allergenic, high nutritional organic wheat
 	
 	</td>
 </tr>
@@ -72,7 +72,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Anders Borgen
 	
 	</td>
 </tr>
@@ -80,10 +80,9 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
+	  	Houvej 55<br>
+		9550 Mariager<br>
+		Danmark
 				
 				
 	  </td>
@@ -92,7 +91,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		borgen@agrologica.dk
 	
 	</td>
 </tr>
@@ -100,7 +99,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		+ 45 40813518
 	
 	</td>
 </tr>
@@ -108,7 +107,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Agrologica
 	
 	</td>
 </tr>
@@ -116,7 +115,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		385 000
 	
 	 kr</td>
 </tr>
