--- a/projekt/2018-85.html
+++ b/projekt/2018-85.html
@@ -34,7 +34,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=f-col></td>
     <td class=f-col><p><font face="Verdana" size="4">Beviljade projekt:
 
- |--Diarienummer--|
+2018-85
  
   </font></p></td>
 </tr>
@@ -60,7 +60,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td colspan="2">
 	
-	|--Projekttitel--|
+	Lindring av symptom för patienter med Crohn´s eller ulcerös kolit med mjölksyrabakterier från honungsbin - en klinisk placebokontrollerad studie
 	
 	</td>
 </tr>
@@ -72,7 +72,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Sökande:</td>
     <td class=bp-col2>
 	
-	|--Sökande--|	
+	Tobias Olofsson
 	
 	</td>
 </tr>
@@ -80,11 +80,11 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>Adress:</td>
     <td class=bp-col2>
 	  
-	  	|--Adress med <br>
-		 emellan--|<br>
-				<br>
-				<br>
-				
+	  	Medicinsk Mikrobiologi <br>
+		Lunds universitet<br>
+		Scheelevägen 2		<br>
+		223 63 Lund		<br>
+		Sverige	
 				
 	  </td>
 </tr>
@@ -92,7 +92,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>E-post:</td>
     <td class=bp-col2>
 	
-		|--Epost--|
+		tobias.olofsson@med.lu.se
 	
 	</td>
 </tr>
@@ -100,7 +100,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-col1>Telefon:</td>
     <td class=bp-col2>
 	
-		|--Telefon--|
+		070-6837683
 	
 	</td>
 </tr>
@@ -108,7 +108,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong><br><br>Förvaltande organ:</strong><br><br></td>
     <td class=bp-col2><br><br>
 	
-		|--Förvaltande organ--|
+		Lunds universitet
 	
 	</td>
 </tr>
@@ -116,7 +116,7 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx><strong>Beviljade medel:</strong></td>
     <td class=bp-col2>
 	
-		|--Beviljade medel--|
+		800 000
 	
 	 kr</td>
 </tr>
