Lagt ut rapporter 2012-27

--- a/projekt/2011-66.html
+++ b/projekt/2011-66.html
@@ -145,7 +145,7 @@ Expressive Arts Stockholm AB
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
 <tr>
-    <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
+    <td colspan="2" >Se projekt 2012-27 för rapportering</td>
 </tr>
 </table>
 	  
