--- a/projekt/2012-27.html
+++ b/projekt/2012-27.html
@@ -126,12 +126,15 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
+ 
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-col2><a href="2012-27/2012-27PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a></td>
+	<td class=bp-col2><a href="2012-27/2012-27Rapport.pdf">Slutrapport</a></td>
+	<td class=bp-col2><a href="2012-27/2012-27RapportMaj2013.pdf">Rapport maj 2013</a></td>
+	<td class=bp-col2><a href="2012-27/2012-27PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
