--- a/projekt/2012-27.html
+++ b/projekt/2012-27.html
@@ -128,13 +128,13 @@ border="0" usemap="#rubrik"></DIV>
 </tr>
  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2012-27/2012-27PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a></td>
-	<td class=bp-col2><a href="2012-27/2012-27Rapport.pdf">Slutrapport</a></td>
-	<td class=bp-col2><a href="2012-27/2012-27RapportMaj2013.pdf">Rapport maj 2013</a></td>
-	<td class=bp-col2><a href="2012-27/2012-27PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2012-27/2012-27PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2012-27/2012-27Rapport.pdf">Slutrapport</a><br>
+	<a href="2012-27/2012-27RapportMaj2013.pdf">Rapport maj 2013</a><br>
+	<a href="2012-27/2012-27PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
-
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -142,7 +142,7 @@ border="0" usemap="#rubrik"></DIV>
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
-	  
+-->	  
 
 
 
