--- a/projekt/2013-2.html
+++ b/projekt/2013-2.html
@@ -128,12 +128,16 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2013-02/2013-02PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2013-02/2013-02Rapport.pdf">Slutrapport</a><br>
+	<a href="2013-02/2013-02AR2016.pdf">Årsapport 2016</a><br>
+	<a href="2013-02/2013-02AR2015.pdf">Årsapport 2015</a><br>
+	<a href="2013-02/2013-02AR2014.pdf">Årsapport 2014</a><br>
+	<a href="2013-02/2013-02PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -141,6 +145,7 @@ border="0" usemap="#rubrik"></DIV>
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
+-->	  
 	  
 
 
