--- a/projekt/2013-12.html
+++ b/projekt/2013-12.html
@@ -132,7 +132,7 @@ border="0" usemap="#rubrik"></DIV>
 <tr>
     <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
     <td class=bp-col2><a href="2013-12/2013-12PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
-	<a href="2013-12/2013-12Rapport.pdf">Slutrapport</a><br>
+	<a href="2013-12/2013-12Slutrapport.pdf">Slutrapport</a><br>
 	<a href="2013-12/2013-12AR2015.pdf">Årsrapport 2015</a><br>
 	<a href="2013-12/2013-12PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
