Lagt ut 2013-14 Rapport

--- a/projekt/2013-14.html
+++ b/projekt/2013-14.html
@@ -128,12 +128,15 @@ Yield stability and sustainability in protein forage crop, faba bean - Utilisati
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2013-14/2013-14PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2013-14/2013-14RapportRevid.pdf">Slutrapport</a><br>
+	<a href="2013-14/2013-14AR2015.pdf">Årsrapport maj 2015</a><br>
+	<a href="2013-14/2013-14AR2014.pdf">Årsrapport maj 2014</a><br>
+	<a href="2013-14/2013-14PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -141,6 +144,7 @@ Yield stability and sustainability in protein forage crop, faba bean - Utilisati
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
+-->	  
 	  
 
 
