--- a/projekt/2013-16.html
+++ b/projekt/2013-16.html
@@ -127,12 +127,16 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2013-16/2013-16PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2013-16/2013-16Rapport.pdf">Slutrapport</a><br>
+	<a href="2013-16/2013-16AR2015.pdf">Årsrapport 2015</a><br>
+	<a href="2013-16/2013-16AR2015Bilaga.pdf">Årsrapport 2015 Bilaga</a><br>
+	<a href="2013-16/2013-16AR2014.pdf">Årsrapport maj 2014</a><br>
+	<a href="2013-16/2013-16PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -140,6 +144,7 @@ border="0" usemap="#rubrik"></DIV>
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
+-->	  
 	  
 
 
