--- a/projekt/2013-127.html
+++ b/projekt/2013-127.html
@@ -128,12 +128,13 @@ Stephan Baumgartner
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2013-127/2013-127PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2013-127/2013-127Rapport.pdf">Slutrapport</a><br>
+	<a href="2013-127/2013-127PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -141,7 +142,7 @@ Stephan Baumgartner
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
-	  
+-->	  
 
 
 
