Lagt ut 2014-63 rapport

--- a/projekt/2014-63.html
+++ b/projekt/2014-63.html
@@ -128,12 +128,18 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2014-63/2014-63PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2014-63/2014-63Rapport.pdf">Slutrapport</a><br>
+	<a href="2014-63/2014-63Rapport-A1.pdf">Slutrapport Bilaga 1</a><br>
+	<a href="2014-63/2014-63Rapport-A2.pdf">Slutrapport Bilaga 2</a><br>
+	<a href="2014-63/2014-63Rapport-A3.pdf">Slutrapport Bilaga 3</a><br>
+	<a href="2014-63/2014-63Rapport-A4.pdf">Slutrapport Bilaga 4</a><br>
+	<a href="2014-63/2014-63Rapport-A5.pdf">Slutrapport Bilaga 5</a><br>
+	<a href="2014-63/2014-63PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -141,6 +147,7 @@ border="0" usemap="#rubrik"></DIV>
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
+-->	  
 	  
 
 
