--- a/projekt/2015-72.html
+++ b/projekt/2015-72.html
@@ -122,12 +122,13 @@ border="0" usemap="#rubrik"></DIV>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2015-72/2015-72PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2015-72/2015-72Rapport.pdf">Slutrapport</a><br>
+	<a href="2015-72/2015-72PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -135,6 +136,7 @@ border="0" usemap="#rubrik"></DIV>
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
+-->	  
 	  
 
 
