--- a/projekt/2015-74.html
+++ b/projekt/2015-74.html
@@ -122,12 +122,13 @@ Maria Wivstad
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2015-74/2015-74PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2015-74/2015-74Rapport.pdf">Slutrapport</a><br>
+	<a href="2015-74/2015-74PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -135,7 +136,7 @@ Maria Wivstad
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
-	  
+-->	  
 
 
 
