Lagt ut 2016-62 rapport

--- a/projekt/2016-62.html
+++ b/projekt/2016-62.html
@@ -125,12 +125,14 @@ Skillebyholm 7<br>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2016-62/2016-62PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2016-62/2016-62Rapport.pdf">Slutrapport</a><br>
+	<a href="2016-62/2016-62Rapport-Bilaga.pdf">Slutrapport bilaga</a><br>
+	<a href="2016-62/2016-62PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -138,6 +140,7 @@ Skillebyholm 7<br>
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
+-->	  
 	  
 
 
