--- a/projekt/2016-68.html
+++ b/projekt/2016-68.html
@@ -125,12 +125,13 @@ Inst för Ekologi, Miljö och Botanik<br>
     <td class=bp-colx>&nbsp;</td>
     <td class=bp-col2>&nbsp;</td>
 </tr>
-<!--  
 <tr>
-    <td class=bp-colx><strong>Projektdokumentation:</strong></td>
-    <td class=bp-col2><a href="2004-73/2004-73PVS.pdf">Popul&auml;rvetenskaplig sammanfattning</a></td>
+    <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
+    <td class=bp-col2><a href="2016-68/2016-68PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
+	<a href="2016-68/2016-68Rapport.pdf">Slutrapport</a><br>
+	<a href="2016-68/2016-68PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
--->
+<!--
 </table>
 
 <table cellspacing="2" cellpadding="2" border="0" class=artikel>
@@ -138,7 +139,7 @@ Inst för Ekologi, Miljö och Botanik<br>
     <td colspan="2" >Ingen ytterligare information on detta projekt finns för närvarande tillgänglig på våra webbsidor</td>
 </tr>
 </table>
-	  
+-->	  
 
 
 
