--- a/projekt/2013-14.html
+++ b/projekt/2013-14.html
@@ -132,8 +132,8 @@ Yield stability and sustainability in protein forage crop, faba bean - Utilisati
     <td class=bp-colx><strong>Projektdokumentation:</strong></td><br>
     <td class=bp-col2><a href="2013-14/2013-14PVR.pdf">Popul&auml;rvetenskaplig resultatsammanfattning</a><br>
 	<a href="2013-14/2013-14RapportRevid.pdf">Slutrapport</a><br>
-	<a href="2013-14/2013-14AR2015.pdf">Årsrapport maj 2015</a><br>
-	<a href="2013-14/2013-14AR2014.pdf">Årsrapport maj 2014</a><br>
+	<a href="2013-14/2013-14AR2015.pdf">Årsrapport 2015</a><br>
+	<a href="2013-14/2013-14AR2014.pdf">Årsrapport 2014</a><br>
 	<a href="2013-14/2013-14PVS.pdf">Popul&auml;rvetenskaplig projektbeskrivning</a></td>
 </tr>
 <!--
