--- a/vr/index.html
+++ b/vr/index.html
@@ -27,7 +27,7 @@ tr:nth-child(even) {
 <table>
 <tr>
 	<td>Styrelsens &ouml;vergripande instruktion<br>till Vetenskapliga R&aring;det</td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/170607 Instruktion VR 2017.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Instruktion VR 2019.pdf">L&auml;nk till dokument</a></td>
 </tr>	
 </table>
 	
@@ -38,17 +38,17 @@ tr:nth-child(even) {
 <tr>
 	<td>&Aring;rets ans&ouml;kningar</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2018.html">L&auml;nk till ans&ouml;kningarna</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2019.html">L&auml;nk till ans&ouml;kningarna</a></td>
 </tr>
 <tr>
-	<td>F&ouml;rdelning av ans&ouml;kningar  - version 3 2018-08-17  </td>
+	<td>F&ouml;rdelning av ans&ouml;kningar  - version 1 2019-06-18  </td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Foredragande2018-3.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Foredragande2019-1.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Instruktioner f&ouml;r utv&auml;rderingen</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/VRInstruktioner2018.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/VRInstruktioner2019.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Torkels beskrivning av arbetsmetodik</td>
@@ -58,12 +58,12 @@ tr:nth-child(even) {
 <tr>
 	<td>Mall f&ouml;r utl&aring;tandetexter</td>
 	<td>ladda ner och fyll i dina bed&ouml;mningar</td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/utvard2018.xlsx">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/utvard2019.xlsx">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
 	<td>Styrelsens beskrivning av &auml;ndam&aring;l, inrikting och relevans</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/Andamal, inriktning, relevanskriterier 2018.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Andamal inriktning relevanskriterier 2019.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <!--<tr>
 	<td>Mall f&ouml;r utl&aring;tandetexter</td>
@@ -73,12 +73,12 @@ tr:nth-child(even) {
 <tr>
 	<td>Sammanst&auml;llning &ouml;ver alla ans&ouml;kningar</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/OversiktAnsokningar2018.pdf">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/OversiktAnsokningar2019.pdf">L&auml;nk till dokument</a></td>
 </tr>
 <tr>
-	<td>Mail/Brev till VR juni 2018</td>
+	<td>Mail/Brev till VR juni 2019</td>
 	<td> </td>
-	<td><a href="http://www.ekhagastiftelsen.se/vr/VR180608">L&auml;nk till dokument</a></td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/VR190619.pdf">L&auml;nk till dokument</a></td>
 </tr>
 
 </table>
@@ -86,6 +86,16 @@ tr:nth-child(even) {
   
 <h3>Tidigare &aring;rs utl&aring;tanden och ans&ouml;kningar</h3>  
 <table>
+<tr>
+	<td>2018</td>
+	<td>VR utl&aring;tande september 2018</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/TidigareBeslut/Utlatande2018.pdf">L&auml;nk till dokument</a></td>
+</tr>
+<tr>
+	<td></td>
+	<td>Alla ans&ouml;kningsdokument</td>
+	<td><a href="http://www.ekhagastiftelsen.se/vr/Ansok2018.html">L&auml;nk till dokument</a></td>
+</tr>
 <tr>
 	<td>2017</td>
 	<td>VR utl&aring;tande november 2017</td>
